Final-Project/akka-io/api/akka-core/2.6/akka/actor/dungeon/index.md
---
description: Akka 2.6.21 - akka.actor.dungeon
knowledge_type: official_documentation
scraped_at: '2026-04-06T14:17:41Z'
section: api
site: akka-io
source_url: https://doc.akka.io/api/akka/current/akka/actor/dungeon/index.html
title: Akka 2.6.21 - akka.actor.dungeon
---

# Akka 2.6.21 - akka.actor.dungeon

> **Summary:** Akka 2.6.21 - akka.actor.dungeon

## Content

Akka2\.6\.21 \< Back****# Packages

- [**](../../../index.html "Permalink")  package [root](../../../index.html)Definition Classes[root](../../../index.html)
- [**](../../../akka/index.html "Permalink")  package [akka](../../index.html)Definition Classes[root](../../../index.html)
- [**](../../../akka/actor/index.html "Permalink")  package [actor](../index.html)Definition Classes[akka](../../index.html)
- [**](../../../akka/actor/dungeon/index.html "Permalink")  package dungeonDefinition Classes[actor](../index.html)
- [SerializationCheckFailedException](SerializationCheckFailedException.html)
- [**](../../../akka/actor/setup/index.html "Permalink")  package [setup](../setup/index.html)Definition Classes[actor](../index.html)
- [**](../../../akka/actor/testkit/index.html "Permalink")  package [testkit](../testkit/index.html)Definition Classes[actor](../index.html)
- [**](../../../akka/actor/typed/index.html "Permalink")  package [typed](../typed/index.html)Definition Classes[actor](../index.html)
p[akka](../../index.html).[actor](../index.html)

# dungeon[**](../../../akka/actor/dungeon/index.html "Permalink")

#### package dungeon

### Type Members

1. [**](../../../akka/actor/dungeon/SerializationCheckFailedException.html "Permalink") final  case class [SerializationCheckFailedException](SerializationCheckFailedException.html) extends [AkkaException](../../AkkaException.html) with [Product](https://www.scala-lang.org/api/2.13.8/scala/Product.html#scala.Product) with SerializableAnnotations@SerialVersionUID()
### Ungrouped

## Related Pages (Internal Links)

- https://doc.akka.io/api/akka-core/2.6/akka/AkkaException.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/dungeon/SerializationCheckFailedException.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/dungeon/index.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/index.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/setup/index.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/testkit/index.html
- https://doc.akka.io/api/akka-core/2.6/akka/actor/typed/index.html
- https://doc.akka.io/api/akka-core/2.6/akka/index.html
- https://doc.akka.io/api/akka-core/2.6/index.html

---
*Source: [https://doc.akka.io/api/akka-core/2.6/akka/actor/dungeon/index.html](https://doc.akka.io/api/akka-core/2.6/akka/actor/dungeon/index.html)*