Final-Project/akka-io/api/akka-core/2.10/akka/actor/dungeon/index.md
---
description: Akka 2.10.17 - akka.actor.dungeon
knowledge_type: official_documentation
scraped_at: '2026-04-05T19:41:50Z'
section: api
site: akka-io
source_url: https://doc.akka.io/api/akka-core/current/akka/actor/dungeon/index.html
title: Akka 2.10.17 - akka.actor.dungeon
---

# Akka 2.10.17 - akka.actor.dungeon

> **Summary:** Akka 2.10.17 - akka.actor.dungeon

## Content

Akka2\.10\.17 \< Back****# Packages

- [**](../../../index.html "Permalink")  package [root](../../../index.html)Definition Classes[root](../../../index.html)
- [**](../../../akka/index.html "Permalink")  package [akka](../../index.html)Definition Classes[root](../../../index.html)
- [**](../../../akka/actor/index.html "Permalink")  package [actor](../index.html)Definition Classes[akka](../../index.html)
- [**](../../../akka/actor/dungeon/index.html "Permalink")  package dungeonDefinition Classes[actor](../index.html)
- [LicenseKeySupplier](LicenseKeySupplier.html "INTERNAL API: Supplies an Akka license key.")
- [SerializationCheckFailedException](SerializationCheckFailedException.html)
- [**](../../../akka/actor/setup/index.html "Permalink")  package [setup](../setup/index.html)Definition Classes[actor](../index.html)
- [**](../../../akka/actor/testkit/index.html "Permalink")  package [testkit](../testkit/index.html)Definition Classes[actor](../index.html)
- [**](../../../akka/actor/typed/index.html "Permalink")  package [typed](../typed/index.html)Definition Classes[actor](../index.html)
p[akka](../../index.html).[actor](../index.html)

# dungeon[**](../../../akka/actor/dungeon/index.html "Permalink")

#### package dungeon

****Ordering1. Alphabetic
Visibility1. Public
2. Protected
### Type Members

1. [**](../../../akka/actor/dungeon/LicenseKeySupplier.html "Permalink")  trait [LicenseKeySupplier](LicenseKeySupplier.html "INTERNAL API: Supplies an Akka license key.") extends [AnyRef](https://www.scala-lang.org/api/2.13.17/scala/AnyRef.html#scala.AnyRef)INTERNAL API: Supplies an Akka license key.

INTERNAL API: Supplies an Akka license key.

Annotations@[InternalStableApi](../../annotation/InternalStableApi.html)()
2. [**](../../../akka/actor/dungeon/SerializationCheckFailedException.html "Permalink") final  case class [SerializationCheckFailedException](SerializationCheckFailedException.html) extends [AkkaException](../../AkkaException.html) with [Product](https://www.scala-lang.org/api/2.13.17/scala/Product.html#scala.Product) with SerializableAnnotations@SerialVersionUID()
### Value Members

1. [**](../../../akka/actor/dungeon/LicenseKeySupplier$.html "Permalink")  object [LicenseKeySupplier](LicenseKeySupplier$.html "INTERNAL API")INTERNAL API

INTERNAL API

Annotations@[InternalStableApi](../../annotation/InternalStableApi.html)()
### Ungrouped

## Related Pages (Internal Links)

- https://doc.akka.io/api/akka-core/2.10/akka/AkkaException.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/LicenseKeySupplier$.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/LicenseKeySupplier.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/SerializationCheckFailedException.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/index.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/index.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/setup/index.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/testkit/index.html
- https://doc.akka.io/api/akka-core/2.10/akka/actor/typed/index.html
- https://doc.akka.io/api/akka-core/2.10/akka/annotation/InternalStableApi.html
- https://doc.akka.io/api/akka-core/2.10/akka/index.html
- https://doc.akka.io/api/akka-core/2.10/index.html

---
*Source: [https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/index.html](https://doc.akka.io/api/akka-core/2.10/akka/actor/dungeon/index.html)*